# redox

./: .gitignore  .gitmodules  Cargo.toml  LICENSE
crates/redox-cli/: Cargo.toml
crates/redox-cli/src/: main.rs  visualizer.rs
crates/redox-cli/src/visualizer/: app.rs  mod.rs  renderer.rs  types.rs
crates/redox-core/: Cargo.toml
crates/redox-core/src/: collision.rs  config.rs  game_object.rs  gdr.rs  lib.rs  parser.rs  pathfinder.rs  physics.rs  spatial_grid.rs  state.rs
crates/redox-core/src/formats/: level.rs  mod.rs
crates/redox-core/src/formats/replay/: gdr.rs
crates/redox-core/src/game_object/: from_raw.rs  mapping.rs  mod.rs  obb.rs  types.rs
crates/redox-core/src/pathfinder/: builder.rs  mod.rs  search.rs  sim.rs  solver.rs
crates/redox-core/src/replay/: mod.rs
crates/redox-core/src/simulation/: collision.rs  mod.rs
