[package]
name = "redox-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
redox-core = { path = "../redox-core" }
anyhow = "1.0"
clap = { version = "4.5.53", features = ["derive"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
glam = "0.30"
macroquad = "0.4"
