[package]
name = "redox-cli"
version = "0.1.1"
edition = "2024"

[dependencies]
redox-core = { path = "../redox-core" }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
glam = "0.30"
macroquad = "0.4"
